Site: Updated packages price

--- a/site/styles/content.less
+++ b/site/styles/content.less
@@ -44,7 +44,7 @@ section#about_egauge,
 section#package_details {
 	display: block;
 	position: relative;
-	padding-top: 50px;
+	padding-top: 15px;
 	padding-right: 0px;
 	padding-left: 50%;
 	background-position: calc(~'(50% - 510px)') top;
@@ -133,6 +133,11 @@ section#about_egauge h2 {
 section#package_details p,
 section#packages div.package p {
 	padding-left: 20px;
+}
+
+section#package_details p,
+section#packages div.package p.price {
+	font-weight: 700;
 }
 
 section#package_features a.buy,
