--- a/site/styles/content.less
+++ b/site/styles/content.less
@@ -309,6 +309,7 @@ section#package_details.industry article {
 /**
  * Egauge article
  */
+section#contact-form, 
 section#return,
 section#shipping,
 section#warranty,
@@ -320,6 +321,7 @@ section#egauge {
 	padding: @vertical_spacing calc(~'(100% - 1200px) / 2');
 }
 
+section#contact-form,
 section#downloads,
 section#videos,
 section#eguage_details {
@@ -1024,4 +1026,101 @@ div.dialog div.content div.inner_content div > div.captcha label input {
 
 div.dialog div.content div.inner_content div div.captcha label img {
 	padding-left: 25px;
+}
+
+/**
+ * contact page
+ */
+section#contact-form  form {
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+	width: 900px;
+	text-align: left;	
+}
+
+section#contact-form  form label {
+	display: block;
+	margin-bottom: 40px;
+	transition: all 0.3s;
+}
+
+section#contact-form  form label input {
+	border: none;
+	border-bottom: 1px solid @color_ac_blue;
+	padding-top: 5px;
+	padding-bottom: 5px;
+	width: 100%;
+	transition: all 0.3s;
+}
+
+section#contact-form  form label input:focus {
+	border-bottom: 1px solid @color_ac_green;
+}
+
+section#contact-form  form label:nth-of-type(2),
+section#contact-form  form label:nth-of-type(3) {
+	display: inline-block;
+	vertical-align: top;
+	width: 48%;
+}
+
+section#contact-form  form label:nth-of-type(2) {
+	margin-right: 2%;
+}
+
+section#contact-form  form label:nth-of-type(3) {
+	margin-left: 2%;
+}
+
+section#contact-form div.controls {
+	text-align: center;
+	margin-left: auto;
+	margin-right: auto;
+	width: 20%;
+	position: relative;
+}
+
+section#contact-form div.controls:hover:before {
+	top: -10px;
+}
+
+section#contact-form div.controls:hover:after {
+	bottom: -10px;
+}
+
+section#contact-form div.controls:before {
+	content: "";
+	position: absolute;
+	left: 0px;
+	top: 0px;
+	width: 100%;
+	height: 1px;
+	background-color: @color_ac_blue;
+	transition: all 0.3s;
+}
+
+section#contact-form div.controls:after {
+	content: "";
+	position: absolute;
+	left: 0px;
+	bottom: 0px;
+	width: 100%;
+	height: 1px;
+	background-color: @color_ac_blue;
+	transition: all 0.3s;
+}
+
+section#contact-form div.controls button {
+	border: none;
+	background-color: white;
+	color: @color_text;
+	font-size: 2em;
+	text-transform: uppercase;
+	cursor: pointer;
+	transition: all 0.3s;
+}
+
+section#contact-form div.controls button:hover {
+	color: @color_ac_green;
 }
