--- a/site/styles/content_mobile.less
+++ b/site/styles/content_mobile.less
@@ -129,11 +129,30 @@ section#packages div.package h2 {
 	margin-right: auto;	
 }
 
+section#package_details div.price,
+section#packages div.package div.price, 
 section#package_details p,
 section#packages div.package p {
 	width: 95%;
 	margin-left: auto;
 	margin-right: auto;
+}
+
+section#package_details div.price,
+section#packages div.package div.price {
+
+	font-weight: 700;
+	font-size: 1.3em;
+	position: relative;
+	width: 85px;
+}
+
+section#package_details div.price:before,
+section#packages div.package div.price:before {
+	content: attr(data-currency);
+	position: absolute;
+	top: 0px;
+	left: 100%;
 }
 
 section#package_features a.buy,
@@ -867,4 +886,63 @@ div.dialog div.content div.inner_content div > div.captcha label input {
 
 div.dialog div.content div.inner_content div div.captcha label img {
 	padding-left: 25px;
+}
+
+/**
+ * Contact page
+ */
+section#contact-form p {
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+	width: 95%;
+	text-align: center;	
+}
+
+section#contact-form  form {
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+	width: 95%;
+	text-align: left;	
+}
+
+section#contact-form  form label {
+	display: block;
+	margin-bottom: 20px;
+	transition: all 0.3s;
+}
+
+section#contact-form  form label input {
+	border: none;
+	border-bottom: 1px solid @color_ac_blue;
+	padding-top: 5px;
+	padding-bottom: 5px;
+	width: 100%;
+	transition: all 0.3s;
+}
+
+section#contact-form  form label input:focus {
+	border-bottom: 1px solid @color_ac_green;
+}
+
+section#contact-form div.controls {
+	text-align: center;
+	position: relative;
+	margin-bottom: 20px;
+}
+
+section#contact-form div.controls button {
+	border: none;
+	border-top: 1px solid @color_ac_blue;
+	border-bottom: 1px solid @color_ac_blue;
+	background-color: white;
+	font-size: 2em;
+	text-transform: uppercase;
+	cursor: pointer;
+	transition: all 0.3s;
+}
+
+section#contact-form div.controls button:hover {
+	color: @color_ac_green;
 }
