--- a/site/templates/contact.xml
+++ b/site/templates/contact.xml
@@ -19,10 +19,11 @@
 			<cms:template file="parts/header.xml"/>
 
 			<section id="about">
-				<h2><cms:text constant="title_about"/></h2>
+				<h2><cms:text constant="title_contact"/></h2>
 			</section>
 
-			<section id="contact">
+			<section id="contact-form">
+				<p><cms:text constant="title_form"/></p>
 				<cms:module
 					name="contact_form"
 					action="show"
