Style: Updated section#contact-header

--- a/site/styles/content.less
+++ b/site/styles/content.less
@@ -36,6 +36,8 @@ section#packages div.package {
 	transition: 0.5s opacity, 0s visibility;
 	transition-delay: 0s, 0.5s;
 }
+
+section#contact-header,
 section#blog-header,
 section#about,
 section#title_documentation,
@@ -55,6 +57,7 @@ section#package_details {
 	min-height: 500px;
 }
 
+section#contact-header,
 section#blog-header,
 section#about,
 section#title_documentation,
@@ -109,12 +112,22 @@ section#title_documentation {
 	background-color: @color_ac_blue;
 }
 
-section#blog-header,
+section#contact-header{
+	background-image: url(../images/contact-us-background.jpg);
+	background-color: @color_ac_blue;
+}
+
 section#about {
+	background-image: url(../images/about-us-background.jpg);
+	background-color: @color_ac_blue;
+}
+
+section#blog-header{
 	background-image: url(../images/blog-background.jpg);
 	background-color: @color_ac_blue;
 }
 
+section#contact-header h2,
 section#blog-header h2,
 section#about h2,
 section#title_documentation h2,
@@ -126,6 +139,7 @@ section#packages div.package h2 {
 	padding-left: 20px;
 }
 
+section#contact-header h2,
 section#blog-header h2,
 section#about h2,
 section#title_documentation h2,
