--- a/site/styles/content_mobile.less
+++ b/site/styles/content_mobile.less
@@ -38,6 +38,7 @@ section#packages div.package {
 	transition-delay: 0s, 0.5s;
 }
 
+section#contact-header,
 section#blog-header,
 section#about,
 section#title_documentation,
@@ -58,6 +59,7 @@ section#package_details {
 	min-height: 500px;
 }
 
+section#contact-header,
 section#blog-header,
 section#about,
 section#title_documentation,
@@ -114,12 +116,22 @@ section#title_documentation {
 	background-color: @color_ac_blue;
 }
 
-section#blog-header,
+section#contact-header{
+	background-image: url(../images/contact-us-background.jpg);
+	background-color: @color_ac_blue;
+}
+
 section#about {
+	background-image: url(../images/about-us-background.jpg);
+	background-color: @color_ac_blue;
+}
+
+section#blog-header{
 	background-image: url(../images/blog-background.jpg);
 	background-color: @color_ac_blue;
 }
 
+section#contact-header h2,
 section#blog-header h2,
 section#about h2,
 section#title_documentation h2,
