Header style: Adjusted margins for menu.

--- a/site/styles/header.less
+++ b/site/styles/header.less
@@ -39,9 +39,13 @@ header a.logo span {
 }
 
 nav#main {
-	margin-left: 3em;
-	margin-right: 3em;
+	margin-left: 10em;
 	vertical-align: middle;
+}
+
+body.rtl nav#main {
+	margin-left: 0;
+	margin-right: 10em;
 }
 
 nav#main ul {
