Style: Updated header a.logo tag

--- a/site/styles/header_mobile.less
+++ b/site/styles/header_mobile.less
@@ -71,12 +71,17 @@ header.mobile_title a.menu:after {
 }
 
 header.mobile_title a.logo {
+	display: inline-block;
 	vertical-align: middle;
+	width: 50%;
+	text-align: center;
+	text-decoration: none;
+	color: @color_text;
 }
 
 header.mobile_title a.logo img {
-	width: 163px;
-	height: 40px;
+	display: block;
+	
 }
 
 header.mobile_title a.phone {
