Style: Replaced section#return with section#policy

--- a/site/styles/content.less
+++ b/site/styles/content.less
@@ -328,7 +328,7 @@ section#package_details.industry article {
  * Egauge article
  */
 section#contact-form, 
-section#return,
+section#privacy,
 section#shipping,
 section#warranty,
 section#about_content,
@@ -364,7 +364,7 @@ section#package_features article {
 	background-image: none;
 }
 
-section#return article,
+section#privacy article,
 section#shipping article,
 section#warranty article,
 section#about_content article,
@@ -375,14 +375,14 @@ section#package_features article {
 	padding-right: 0%;
 }
 
-section#return article a,
+section#privacy article a,
 section#shipping article a,
 section#warranty article a {
 	color: @color_header;
 	transition: all 0.3s;
 }
 
-section#return article a:hover,
+section#privacy article a:hover,
 section#shipping article a:hover,
 section#warranty article a:hover {
 	color: darken(@color_header,10%);
