--- a/site/styles/content_mobile.less
+++ b/site/styles/content_mobile.less
@@ -319,7 +319,7 @@ section#package_details.industry article {
  * Egauge article
  */
 
-section#return, 
+section#privacy, 
 section#shipping,
 section#warranty, 
 section#about_content, 
@@ -360,7 +360,7 @@ section#package_features article {
 }
 
 section#blog-content article,
-section#return article,
+section#privacy article,
 section#shipping article, 
 section#warranty article, 
 section#about_content article,
@@ -375,14 +375,14 @@ section#blog-content article img {
 	display: block;
 }
 
-section#return article a,
+section#privacy article a,
 section#shipping article a, 
 section#warranty article a {
 	color: @color_header;
 	transition: all 0.3s;
 }
 
-section#return article a:hover,
+section#privacy article a:hover,
 section#shipping article a:hover, 
 section#warranty article a:hover {
 	color: darken(@color_header,10%);
