Style: Updated width value of nav#article tag

--- a/site/styles/content.less
+++ b/site/styles/content.less
@@ -1185,6 +1185,7 @@ nav#article {
 	right: calc(~'(50% - 480px)');
 	border: 1px solid lighten(@color_text,30%);
 	text-align: center;
+	width: 250px;
 }
 
 nav#article ul {
