Site: Added manual slider to header slides

--- a/site/styles/content.less
+++ b/site/styles/content.less
@@ -73,6 +73,11 @@ section#packages div.package.visible {
 	transition-delay: 0s, 0s;
 }
 
+section#packages div.package.manual_slider {
+	background-color: @color_ac_blue;
+	background-image: url(../images/slides/manual-slider.jpg);
+}
+
 section#package_details.basic,
 section#packages div.package.basic {
 	background-color: @color_ac_blue;
