--- a/site/styles/content.less
+++ b/site/styles/content.less
@@ -789,13 +789,8 @@ div#current_selection label {
 	margin-bottom: 5px;
 }
 
-div#current_selection label:after {
-	content: attr(data-count);
-	display: inline-block;
-	vertical-align: middle;
-}
-
-div#current_selection label span.text {
+div#current_selection label span.text,
+div#current_selection label span.count {
 	display: inline-block;
 	vertical-align: middle;
 }
