Fix line break and default text for counter.

--- a/site/styles/content.less
+++ b/site/styles/content.less
@@ -795,6 +795,10 @@ div#current_selection label span.count {
 	vertical-align: middle;
 }
 
+div#current_selection label span.count {
+	width: auto;
+}
+
 div#current_selection label input {
 	vertical-align: middle;
 }
