Fix rookie errors.

--- a/site/templates/blog-view.xml
+++ b/site/templates/blog-view.xml
@@ -7,7 +7,15 @@
 			<title>
 				<cms:text constant="site_title"/>
 				<cms:raw text=" - "/>
-				<cms:text constant="menu_contact_us"/>
+				<cms:text constant="menu_blog"/>
+				<cms:raw text=" - "/>
+				<cms:module
+					name="articles"
+					action="show"
+					id="fix_id($_REQUEST['id'])"
+					template="parts/blog_article_title.xml"
+					cms:eval="id"
+					/>
 			</title>
 
 			<link href='//fonts.googleapis.com/css?family=Ubuntu|Ultra' rel='stylesheet' type='text/css'/>
