--- a/site/templates/about_us.xml
+++ b/site/templates/about_us.xml
@@ -4,7 +4,12 @@
 	<cms:var name="_DOCTYPE"/>
 	<html lang="$language" cms:eval="lang">
 		<head>
-			<title><cms:text constant="site_title"/><cms:raw text=" - "/><cms:text constant="about_page_label"/></title>
+			<title>
+				<cms:text constant="site_title"/>
+				<cms:raw text=" - "/>
+				<cms:text constant="menu_about_us"/>
+			</title>
+
 			<link href='//fonts.googleapis.com/css?family=Ubuntu|Ultra' rel='stylesheet' type='text/css'/>
 			<cms:collection include="page_control"/>
 			<cms:module name="head_tag" action="print_tag"/>
@@ -13,18 +18,18 @@
 		<body class="$language_rtl ? 'rtl' : 'ltr'" cms:eval="class">
 			<!-- Header -->
 			<cms:template file="parts/header.xml"/>
-			
+
 			<section id="about">
 				<h2><cms:text constant="title_about"/></h2>
 			</section>
-			
+
 			<section id="about_content">
 				<cms:module
 					name="articles"
 					action="show"
 					text_id="about_us"
 					template="parts/basic_article.xml"
-					/>		
+					/>
 			</section>
 
 			<!-- Footer -->
