--- a/site/templates/documentation.xml
+++ b/site/templates/documentation.xml
@@ -4,7 +4,12 @@
 	<cms:var name="_DOCTYPE"/>
 	<html lang="$language" cms:eval="lang">
 		<head>
-			<title><cms:text constant="site_title"/><cms:raw text=" - "/><cms:text constant="documentation_page_label"/></title>
+			<title>
+				<cms:text constant="site_title"/>
+				<cms:raw text=" - "/>
+				<cms:text constant="menu_documentation"/>
+			</title>
+
 			<link href='//fonts.googleapis.com/css?family=Ubuntu|Ultra' rel='stylesheet' type='text/css'/>
 			<cms:collection include="page_control"/>
 			<cms:module name="head_tag" action="print_tag"/>
