--- a/site/templates/e_gauge.xml
+++ b/site/templates/e_gauge.xml
@@ -4,7 +4,12 @@
 	<cms:var name="_DOCTYPE"/>
 	<html lang="$language" cms:eval="lang">
 		<head>
-			<title><cms:text constant="site_title"/><cms:raw text=" - "/><cms:text constant="eguage_page_label"/></title>
+			<title>
+				<cms:text constant="site_title"/>
+				<cms:raw text=" - "/>
+				<cms:text constant="menu_egauge"/>
+			</title>
+
 			<link href='//fonts.googleapis.com/css?family=Ubuntu|Ultra' rel='stylesheet' type='text/css'/>
 			<cms:collection include="page_control"/>
 			<cms:module name="head_tag" action="print_tag"/>
@@ -31,17 +36,15 @@
 					action="show"
 					text_id="eguage_features"
 					template="parts/basic_article.xml"
-					/>	
+					/>
 
 				<cms:module
 					name="articles"
 					action="show"
 					text_id="specification"
 					template="parts/basic_article.xml"
-					/>		
+					/>
 			</section>
-
-
 
 			<!-- Footer -->
 			<cms:template file="parts/footer.xml"/>
