--- a/site/templates/warranty.xml
+++ b/site/templates/warranty.xml
@@ -4,7 +4,12 @@
 	<cms:var name="_DOCTYPE"/>
 	<html lang="$language" cms:eval="lang">
 		<head>
-			<title><cms:text constant="site_title"/><cms:raw text=" - "/><cms:text constant="warrenty_page_label"/></title>
+			<title>
+				<cms:text constant="site_title"/>
+				<cms:raw text=" - "/>
+				<cms:text constant="menu_warranty_agreement"/>
+			</title>
+
 			<link href='//fonts.googleapis.com/css?family=Ubuntu|Ultra' rel='stylesheet' type='text/css'/>
 			<cms:collection include="page_control"/>
 			<cms:module name="head_tag" action="print_tag"/>
@@ -13,7 +18,7 @@
 		<body class="$language_rtl ? 'rtl' : 'ltr'" cms:eval="class">
 			<!-- Header -->
 			<cms:template file="parts/header.xml"/>
-			
+
 			<section id="warranty">
 				<cms:module
 					name="articles"
@@ -22,6 +27,7 @@
 					template="parts/basic_article.xml"
 					/>
 			</section>
+
 			<!-- Footer -->
 			<cms:template file="parts/footer.xml"/>
 		</body>
