--- a/site/templates/blog.xml
+++ b/site/templates/blog.xml
@@ -19,7 +19,12 @@
 			<cms:template file="parts/header.xml"/>
 
 			<section id="blog-header">
-				<h2><cms:text constant="title_blog"/></h2>
+				<cms:module
+					name="articles"
+					action="show"
+					text_id="blog"
+					template="parts/header_article.xml"
+					/>
 			</section>
 
 			<section id="blog-content">
