--- a/site/templates/contact.xml
+++ b/site/templates/contact.xml
@@ -19,7 +19,12 @@
 			<cms:template file="parts/header.xml"/>
 
 			<section id="contact-header">
-				<h2><cms:text constant="title_contact"/></h2>
+				<cms:module
+					name="articles"
+					action="show"
+					text_id="contact"
+					template="parts/header_article.xml"
+					/>
 			</section>
 
 			<section id="contact-form">
