--- a/site/templates/documentation.xml
+++ b/site/templates/documentation.xml
@@ -20,7 +20,12 @@
 			<cms:template file="parts/header.xml"/>
 
 			<section id="title_documentation">
-				<h2><cms:text constant="title_documentation"/></h2>
+				<cms:module
+					name="articles"
+					action="show"
+					text_id="documentation"
+					template="parts/header_article.xml"
+					/>
 			</section>
 
 			<section id="downloads">
