Style: Updated pages top section of the page

--- a/site/styles/content_mobile.less
+++ b/site/styles/content_mobile.less
@@ -144,6 +144,10 @@ section#blog-header{
 	background-color: @color_ac_blue;
 }
 
+section#contact-header p,
+section#blog-header p,
+section#title_video p,
+section#title_documentation p,
 section#contact-header h2,
 section#blog-header h2,
 section#about h2,
@@ -156,6 +160,13 @@ section#packages div.package h2 {
 	width: 95%;
 	margin-left: auto;
 	margin-right: auto;	
+}
+
+section#contact-header p,
+section#blog-header p,
+section#title_video p,
+section#title_documentation p {
+	font-size: 1.2em;
 }
 
 section#package_details div.price,
