Style: Updated section#terms

--- a/site/styles/content_mobile.less
+++ b/site/styles/content_mobile.less
@@ -343,6 +343,7 @@ section#package_details.industry article {
  * Egauge article
  */
 
+section#terms,
 section#privacy, 
 section#shipping,
 section#warranty, 
@@ -383,6 +384,7 @@ section#package_features article {
 	min-height: 0px;
 }
 
+section#terms article,
 section#blog-content article,
 section#privacy article,
 section#shipping article, 
@@ -393,6 +395,13 @@ section#package_features article {
 	margin-right: auto;
 	width: 95%;
 	padding-right: 0%;
+}
+
+section#terms article ol,
+section#terms article ul {
+	margin: 0px;
+	padding: 0px;
+	padding-left: 20px;
 }
 
 section#blog-content article img {
