Site: Added egauge page title and description in header part

--- a/site/styles/content.less
+++ b/site/styles/content.less
@@ -144,6 +144,7 @@ section#packages div.package h2 {
 	padding-left: 20px;
 }
 
+section#about_egauge p,
 section#contact-header p,
 section#blog-header p,
 section#title_video p,
@@ -157,6 +158,8 @@ section#about_egauge h2 {
 	padding-left: 40px;
 }
 
+section#about_egauge p,
+section#blog-header p,
 section#contact-header p,
 section#blog-header p,
 section#title_video p,
