--- a/site/styles/content_mobile.less
+++ b/site/styles/content_mobile.less
@@ -144,6 +144,7 @@ section#blog-header{
 	background-color: @color_ac_blue;
 }
 
+section#about_egauge p,
 section#contact-header p,
 section#blog-header p,
 section#title_video p,
@@ -162,6 +163,7 @@ section#packages div.package h2 {
 	margin-right: auto;	
 }
 
+section#about_egauge p,
 section#contact-header p,
 section#blog-header p,
 section#title_video p,
