--- a/site/templates/e_gauge.xml
+++ b/site/templates/e_gauge.xml
@@ -20,7 +20,12 @@
 			<cms:template file="parts/header.xml"/>
 
 			<section id="about_egauge">
-				<h2><cms:text constant="title_egauge"/></h2>
+				<cms:module
+					name="articles"
+					action="show"
+					text_id="egauge"
+					template="parts/header_article.xml"
+					/>
 			</section>
 
 			<section id="eguage_details">
